@@ -4,6 +4,17 @@
 	* gui/oprof_start.h:
 	* gui/oprof_start_config.cpp:
 	* gui/oprof_start_config.h:
+
+	* libutil++/string_manip.h:
+	* libutil++/string_manip.cpp: add is_prefix(),
+	  make the trimmers take an argument
+
+2003-03-04  John Levon  <levon@movementarian.org>
+
+	* gui/oprof_start.cpp:
+	* gui/oprof_start.h:
+	* gui/oprof_start_config.cpp:
+	* gui/oprof_start_config.h:
 	* gui/persistent_config.h:
 
 	* libutil++/string_manip.h:
